# scabha

./: CLAUDE.md  README.md  README.rst  pyproject.toml
.github/workflows/: publish-package.yml  python-package.yml
docs/source/: conf.py  index.rst  readme.rst
docs/source/reference/: click_utils.rst  logfiles.rst  reference.rst  schema_ref.rst
scabha/: __init__.py  basetypes.py  cargo.py  evaluator.py  exceptions.py  lazy_group.py  schema_utils.py  substitutions.py  validate.py
scabha/configuratt/: core.py  deps.py  helpers.py
src/scabha/: lazy_group.py
tests/: hello_app.py  test_clickify.py  test_configuratt.py  test_include2.yaml  test_parsing.py  test_schema.py  test_substitutions.py  test_validate.py  testconf.yaml
