[project]
name = "scabha"
version = "2.2.0rc2"
description = "Argument parser and validation tool for (not just) radio interferometry"
authors = [
    { name = "Oleg Smirnov and RATT", email = "osmirnov@gmail.com" },
    { name = "Sphesihle Makhathini", email = "sphemakh@gmail.com" },
]
requires-python = ">=3.9,<4.0"
readme = "README.rst"
license = "GPL-3.0"
license-files = ["LICENSE"]
dependencies = [
    "omegaconf~=2.1",
    "click>=8.1.3",
    "pyparsing>=3.0.9",
    "pydantic>=2.7,<3",
    "psutil>=5.9.3",
    "rich>=13.7.0",
    "dill>=0.3.6",
    "typeguard>=4.2.1",
    "uritools>=5.0.0",
]

[dependency-groups]
tests = [
    "pytest>=7.1.3",
]
docs = [
    "Sphinx>=5.3.0",
    "sphinx-copybutton>=0.5.0",
    "furo>=2022.9.15",
]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
    "jupyter"
]

[tool.hatch.build.targets.sdist]
include = ["scabha"]

[tool.hatch.build.targets.wheel]
include = ["scabha"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
